indexer/tests/snapshots/snapshot_tests__api_error_not_found.snap
---
source: indexer/tests/snapshot_tests.rs
expression: err
---
{
  "error": {
    "code": "not_found",
    "message": "Escrow not found"
  }
}
