indexer/tests/snapshots/snapshot_tests__api_error_rate_limited.snap
---
source: indexer/tests/snapshot_tests.rs
expression: err
---
{
  "error": {
    "code": "rate_limited",
    "message": "Max 50 requests per 60 seconds"
  }
}
