indexer/tests/snapshots/snapshot_tests__escrow_settled.snap
---
source: indexer/tests/snapshot_tests.rs
expression: escrow
---
{
  "id": "esc_snap_002",
  "lock_tx_id": "[hash]",
  "lock_tx_output_index": 0,
  "status": "settled",
  "asset_type": "KAS",
  "buyer_address": "kaspa:buyer",
  "seller_address": "kaspa:seller",
  "amount_sompi": 1000000000,
  "fee_sompi": 5000000,
  "template_hash": "[bytes]",
  "expiration_daa_score": 1000,
  "disputed_at": null,
  "dispute_reason": null,
  "cancelled_at": null,
  "expired_at": null,
  "created_at": 1700000000,
  "settled_at": 1700000100,
  "refunded_at": null,
  "mediator_key": null,
  "dispute_mode": null,
  "dispute_outcome": null,
  "dispute_resolved_at": null,
  "price_at_creation": null,
  "price_currency": null,
  "trade_hash": null,
  "price_lock_time": null,
  "price_at_settlement": 0.15,
  "price_source": null,
  "price_type": null,
  "invoice_id": null,
  "memo": null,
  "auto_settle_timeout": null,
  "mediation_status": null,
  "mediation_buyer_claim": null,
  "mediation_seller_claim": null,
  "mediation_result": null,
  "mediation_expires_at": null,
  "mediation_buyer_accepted": null,
  "mediation_seller_accepted": null,
  "chat_pubkey_buyer": null,
  "chat_pubkey_seller": null
}
